# goit-algo2-hw-10

./: .gitignore  README.md  main.py  main1.py  main2.py  pyproject.toml  requirements.txt  test.py  tests.py
