[project]
name = "goit-algo2-hw-10"
version = "0.1.0"
description = "Algorithmic complexity, approximate and randomized algorithms"
authors = [
    {name = "bit-to-bit",email = "vasiliy.pykhteev@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["requests (>=2.34.2,<3.0.0)", "matplotlib (>=3.11.0,<4.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
